--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@ body {
   font-family: "Source Sans Pro", sans-serif;
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
 }
 
 .container {
@@ -48,7 +49,7 @@ body {
   background-color: var(--secondary);
   color: var(--primary);
   border-radius: 5px;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
   font-weight: 700;
   display: inline-block;
   border: none;
@@ -347,3 +348,34 @@ ul li:hover .dropdown{
 .dropdown li a{
   display: block;
 } */
+
+.box img{
+  height: 200px;
+  width: 335px;
+}
+
+.container-card{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-content: space-evenly;
+  margin-top: 10px;
+}
+.box{
+  background-color: lightgrey;
+  width: 350px;
+  border: 2px solid green;
+  padding: 5px;
+  margin: 5px;
+}
+
+.box-details{
+  background-color: lightgrey;
+  width: 350px;
+  height: 350px;
+  border: 2px solid green;
+  padding: 5px;
+  margin: 5px;
+  align-items: center;
+}
+
